Update Google Maps API key in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Australian Energy Dashboard</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key='YourKey'&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB3Jo7fvf17mRW7ta91gFWK50Kd50SM6E&callback=initMap" async defer></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; background-color: #fafafa; }
